[gd_scene load_steps=13 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/Osage/Osage_frames_2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Audio/FX_-_Jump_-_D_or_Eb_Mefenamic.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/FX_-_Bling_-_C_Mefenamic.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/FX_-_Sweet_-_B_Mefenamic.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Audio/FX_-_Wep_Wep_-_C_Mefenamic.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/FX_-_Sprinkle_-_F_Mefenamic.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/MOU_Fixed.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/kiminikaikaisen.mp3" type="AudioStream" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 32.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.0
height = 32.0

[node name="Osage" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="collforKinBod" type="CollisionShape2D" parent="."]
position = Vector2( 6, 4 )
shape = SubResource( 1 )
disabled = true

[node name="HappyTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LoseTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SoundfFx" type="Node" parent="."]

[node name="Bling" type="AudioStreamPlayer" parent="SoundfFx"]
stream = ExtResource( 5 )
volume_db = -30.0

[node name="Sweet" type="AudioStreamPlayer" parent="SoundfFx"]
stream = ExtResource( 6 )
volume_db = -30.0

[node name="Sprinkle" type="AudioStreamPlayer" parent="SoundfFx"]
stream = ExtResource( 8 )
volume_db = -30.0

[node name="Lose" type="AudioStreamPlayer" parent="SoundfFx"]
stream = ExtResource( 9 )
volume_db = -30.0

[node name="Wep" type="AudioStreamPlayer" parent="SoundfFx"]
stream = ExtResource( 7 )
volume_db = -30.0

[node name="Jump" type="AudioStreamPlayer" parent="SoundfFx"]
stream = ExtResource( 4 )
volume_db = -30.0

[node name="Kimi" type="AudioStreamPlayer" parent="SoundfFx"]
stream = ExtResource( 10 )
volume_db = -30.0

[node name="Camera2D" parent="." instance=ExtResource( 3 )]

[node name="ScoreCount" parent="Camera2D/Control" index="2"]
text = "0 out of 53
But you only need 40"

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.289655, 0.289655 )
texture = ExtResource( 2 )
hframes = 3
vframes = 3
frame = 3
region_rect = Rect2( 0, 0, 290, 560 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 6, 4 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="eaten_by_osage" from="Camera2D/Overseer" to="." method="_on_Overseer_eaten_by_osage"]
[connection signal="osage_rage" from="Camera2D/Overseer" to="." method="_on_Overseer_osage_rage"]
[connection signal="win_normal" from="Camera2D/Overseer" to="." method="_on_Overseer_win_normal"]
[connection signal="win_perfect" from="Camera2D/Overseer" to="." method="_on_Overseer_win_perfect"]

[editable path="Camera2D"]
